generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  EMPLOYEE
  MANAGER
  ADMIN
  HR
}

enum GoalStatus {
  DRAFT
  SUBMITTED_TO_MANAGER
  MANAGER_APPROVED
  MANAGER_REJECTED
  RETURNED_FOR_REWORK
  SENT_TO_ADMIN
  ADMIN_APPROVED
  ADMIN_REJECTED
  SENT_TO_HR
  HR_APPROVED
  HR_REJECTED
  COMPLETED
}

enum UoMType {
  NUMERIC_MIN
  NUMERIC_MAX
  PERCENTAGE
  TIMELINE
  ZERO_BASED
}

enum Quarter {
  Q1
  Q2
  Q3
  Q4
}

enum UpdateStatus {
  NOT_STARTED
  ON_TRACK
  COMPLETED
  BLOCKED
  AT_RISK
}

enum ApprovalAction {
  EDITED
  APPROVED
  REJECTED
  RETURNED
  UNLOCKED
  FORWARDED
}

enum InnovationStatus {
  PENDING
  APPROVED
  REJECTED
}

enum TechQuadrant {
  ADOPT
  TRIAL
  ASSESS
  HOLD
}

enum TechRing {
  EMERGING
  GROWING
  MATURE
  LEGACY
}

model Department {
  id          String       @id @default(cuid())
  name        String       @unique
  users       User[]
  sharedGoals SharedGoal[]
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  emailVerified DateTime?
  image         String?
  name          String?
  role          Role      @default(EMPLOYEE)
  password      String?
  departmentId  String?
  managerId     String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  department    Department? @relation(fields: [departmentId], references: [id])
  manager       User?       @relation("ManagerRelation", fields: [managerId], references: [id])
  subordinates  User[]      @relation("ManagerRelation")

  accounts      Account[]
  sessions      Session[]
  goals             Goal[]
  approvals         Approval[]
  auditLogs         AuditLog[]
  sharedGoalsCreated SharedGoal[]
  innovations       Innovation[]    @relation("SubmittedInnovations")
  reviewedIdeas     Innovation[]    @relation("ReviewedInnovations")
  techItems         TechRadarItem[] @relation("AddedTech")
  emailIntegrations EmailIntegration[]
  calendarEvents    CalendarEvent[]

  @@index([managerId])
  @@index([departmentId])
}

model Account {
  id                 String  @id @default(cuid())
  userId             String
  type               String
  provider           String
  providerAccountId  String
  refresh_token      String?  @db.Text
  access_token       String?  @db.Text
  expires_at         Int?
  token_type         String?
  scope              String?
  id_token           String?  @db.Text
  session_state      String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model EmailIntegration {
  id          String   @id @default(cuid())
  userId      String
  provider    String   // gmail, outlook, corporate
  email       String
  accessToken String   // encrypted
  lastSync    DateTime @default(now())
  isActive    Boolean  @default(true)
  
  user        User     @relation(fields: [userId], references: [id])
  emails      ComplaintEmail[]
}

model ComplaintEmail {
  id            String   @id @default(cuid())
  integrationId String
  messageId     String   @unique
  subject       String
  sender        String
  recipient     String
  body          String   @db.Text
  sentAt        DateTime
  category      String?  // Noise, Motor, etc.
  sentiment     String?  // positive, negative, neutral, urgent
  severity      Int      @default(1)
  productId     String?
  region        String?
  isResolved    Boolean  @default(false)
  
  integration   EmailIntegration @relation(fields: [integrationId], references: [id])
  product       Product?         @relation(fields: [productId], references: [id])
  insights      ComplaintInsight[]
}

model ComplaintInsight {
  id              String   @id @default(cuid())
  complaintId     String
  summary         String   @db.Text
  detectedIssue   String?
  recommendation  String?  @db.Text
  createdAt       DateTime @default(now())
  
  complaint       ComplaintEmail @relation(fields: [complaintId], references: [id])
}

model Product {
  id              String   @id @default(cuid())
  name            String
  competitorId    String
  category        String
  price           Float?
  smartFeatures   String[]
  monthlySales    Int      @default(0)
  marketShare     Float    @default(0)
  demandTrend     String?  // UP, DOWN, STABLE
  launchDate      DateTime?
  image           String?
  
  competitor      Competitor @relation(fields: [competitorId], references: [id])
  complaints      ComplaintEmail[]
  salesTrends     SalesTrend[]
}

model Competitor {
  id              String   @id @default(cuid())
  name            String   @unique
  logo            String?
  marketPosition  String?
  smartFeatures   String[]
  products        Product[]
  marketImpact    Float    @default(0)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model TechnologyTrend {
  id              String   @id @default(cuid())
  name            String   @unique
  category        String
  adoptionRate    Float
  growthTrajectory String? // UP, DOWN, STABLE
  regions         String[]
  impactScore     Float
  difficulty      String?  // LOW, MEDIUM, HIGH
  createdAt       DateTime @default(now())
}

model MarketInsight {
  id              String   @id @default(cuid())
  title           String
  description     String   @db.Text
  type            String   // COMPETITOR, TREND, PRODUCT
  severity        String   @default("LOW") // LOW, MEDIUM, HIGH
  isAI            Boolean  @default(true)
  createdAt       DateTime @default(now())
}

model SalesTrend {
  id              String   @id @default(cuid())
  productId       String
  date            DateTime
  salesVolume     Int
  revenue         Float?
  
  product         Product  @relation(fields: [productId], references: [id])
}

model Goal {
  id            String      @id @default(cuid())
  employeeId    String
  title         String
  description   String?
  thrustArea    String?
  uomType       UoMType
  target        Float
  weightage     Float
  status        GoalStatus  @default(DRAFT)
  isShared      Boolean     @default(false)
  sharedGoalId  String?
  quarter       Quarter
  year          Int         @default(2024)
  deadline      DateTime?
  returnReason  String?
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  employee      User          @relation(fields: [employeeId], references: [id])
  updates       QuarterlyUpdate[]
  approvals     Approval[]

  @@index([employeeId])
  @@index([status])
  @@index([quarter, year])
}

model SharedGoal {
  id            String     @id @default(cuid())
  departmentId  String
  title         String
  description   String?
  thrustArea    String?
  uomType       UoMType
  target        Float
  createdById   String
  createdAt     DateTime   @default(now())

  department    Department @relation(fields: [departmentId], references: [id])
  createdBy     User       @relation(fields: [createdById], references: [id])
}

model QuarterlyUpdate {
  id            String       @id @default(cuid())
  goalId        String
  quarter       Quarter
  achievement   Float?
  status        UpdateStatus @default(NOT_STARTED)
  progressScore Float?
  comment       String?
  updatedAt     DateTime     @default(now())

  goal          Goal         @relation(fields: [goalId], references: [id], onDelete: Cascade)

  @@index([goalId])
  @@index([quarter])
}

model Approval {
  id        String         @id @default(cuid())
  goalId    String
  managerId String
  action    ApprovalAction
  comment   String?
  timestamp DateTime       @default(now())

  goal      Goal           @relation(fields: [goalId], references: [id])
  manager   User           @relation(fields: [managerId], references: [id])

  @@index([goalId])
  @@index([managerId])
}

model AuditLog {
  id          String   @id @default(cuid())
  entityType  String
  entityId    String
  fieldName   String?
  oldValue    String?
  newValue    String?
  changedById String
  timestamp   DateTime @default(now())

  changedBy   User     @relation(fields: [changedById], references: [id])

  @@index([entityType, entityId])
  @@index([changedById])
  @@index([timestamp])
}

model CycleWindow {
  id        String   @id @default(cuid())
  quarter   Quarter
  year      Int
  phase     String
  startDate DateTime
  endDate   DateTime
  isActive  Boolean  @default(false)
}

model Innovation {
  id            String           @id @default(cuid())
  title         String
  description   String
  category      String
  impact        String
  status        InnovationStatus @default(PENDING)
  createdAt     DateTime         @default(now())
  submittedById String
  submittedBy   User             @relation("SubmittedInnovations", fields: [submittedById], references: [id])
  reviewedById  String?
  reviewedBy    User?            @relation("ReviewedInnovations", fields: [reviewedById], references: [id])
}

model TechRadarItem {
  id          String       @id @default(cuid())
  name        String
  quadrant    TechQuadrant
  ring        TechRing
  description String
  createdAt   DateTime     @default(now())
  addedById   String
  addedBy     User         @relation("AddedTech", fields: [addedById], references: [id])
}

model CalendarEvent {
  id          String   @id @default(cuid())
  title       String
  date        DateTime
  type        String
  relatedId   String?
  description String?
  userId      String?
  user        User?    @relation(fields: [userId], references: [id])

  @@index([userId])
}

